--- a/notebook/plan_agent.ipynb
+++ b/notebook/plan_agent.ipynb
@@ -2,12 +2,13 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
     "from src.agent.react import ReactAgent\n",
-    "from src.inference.groq import ChatGroq\n",
+    "from src.inference.groq import ChatGroq,AudioGroq\n",
+    "from src.message import SystemMessage,HumanMessage\n",
     "from os import environ\n",
     "from dotenv import load_dotenv\n",
     "from experimental import *\n",
@@ -22,29 +23,16 @@
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Entering \u001b[107m\u001b[30mAI Assistant\u001b[0m\n",
-      "\u001b[1m\u001b[32mThought: I need to remove the Save Tool from the tool box as it is no longer required.\u001b[0m\n",
-      "Entering \u001b[107m\u001b[30mTool Agent\u001b[0m\n",
-      "\u001b[1m\u001b[30mQuery: Remove the Save Tool from the tool box as it is no longer needed.\u001b[0m\n",
-      "save_tool has been removed from experimental.py successfully.\n",
-      "\u001b[1m\u001b[36m Now the tool is removed from the tool box.\u001b[0m\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "agent=ReactAgent(name='AI Assistant',description='Helpful AI assistant.',tools=[],llm=llm,verbose=True)\n",
-    "agent_response=agent.invoke('remove save tool')"
+    "# agent=ReactAgent(name='AI Assistant',description='Helpful AI assistant.',tools=[],llm=llm,verbose=True)\n",
+    "# agent_response=agent.invoke('remove save tool')"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": ".venv",
    "language": "python",
    "name": "python3"
   },
@@ -58,7 +46,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.6"
+   "version": "3.12.7"
   }
  },
  "nbformat": 4,
